--- a/routes/users.js.save.1
+++ b/routes/users.js.save.1
@@ -122,7 +122,7 @@ router.post("/", verifyToken, async (req, res) => {
       `INSERT INTO employees
       (user_id, name, email, department, client_name, work_location, designation, manager_id, active,phoneno)
       VALUES (?, ?, ?, ?, ?, ?, ?, ?, 1,?)`,
-      [userId, name, email, department, client_name, work_location, designation, finalManagerId,phone]
+      [userId, name, email, department, client_name, work_location, designation, finalManagerId,]
     );
 
     await connection.commit();
@@ -178,7 +178,6 @@ router.get("/", verifyToken, async (req, res) => {
         u.id AS user_id,
         e.name,
         e.email,
-        e.phoneno AS phone,
         u.role,
         e.department,
         e.designation,
